sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:60: error: not found: value getCouleur
  var col0=getCouleur(b+1,0)
           ^